<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.Activities.AMazeActivity"
    android:background="@drawable/home"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-21"
        android:text="@string/title"
        android:textColor="#C50202"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Switch
        android:id="@+id/room_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:minHeight="48dp"
        android:textColor="#EA6D6D"
        android:text="@string/Disable_Rooms"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/DFS_button"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:textColor="#EA6D6D"
            android:text="@string/DFS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <RadioButton
            android:id="@+id/Boruvka_button"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:textColor="#EA6D6D"
            android:text="@string/Boruvka"
            app:layout_constraintStart_toEndOf="@+id/DFS_button"
            tools:layout_editor_absoluteY="222dp" />

        <RadioButton
            android:id="@+id/Prim_button"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:textColor="#EA6D6D"
            android:text="@string/Prim"
            app:layout_constraintStart_toEndOf="@+id/Boruvka_button"
            tools:layout_editor_absoluteY="222dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="210dp"
        android:textColor="#EA6D6D"
        android:text="@string/Algorithm"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/difficult_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="311dp"
        android:layout_height="76dp"
        android:layout_marginTop="400dp"

        android:max="10"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="155dp"
        android:textColor="#EA6D6D"
        android:text="@string/Difficulty"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/difficult_seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/explore_button"
        android:layout_width="103dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Explore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Revisit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficult_seekBar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Revisit_button"
        android:layout_width="103dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Revisit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/explore_button"
        app:layout_constraintTop_toBottomOf="@+id/difficult_seekBar"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>