<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.Activities.PlayManuallyActivity">

    <com.example.amazebyconnormackinnon.gui.GameInterface.MazePanel
        android:id="@+id/MazePanel"
        android:layout_width="382dp"
        android:layout_height="352dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379"
        />


    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="650dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/WallButton"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:text="@string/Show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullMazeButton" />

    <Button
        android:id="@+id/fullMazeButton"
        android:layout_width="203dp"
        android:layout_height="48dp"
        android:layout_marginBottom="650dp"
        android:text="@string/FullMaze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/solutionButton"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Solution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/WallButton"
        app:layout_constraintTop_toBottomOf="@+id/fullMazeButton" />

    <ImageButton
        android:id="@+id/Zoom_In"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/solutionButton"
        app:srcCompat="@drawable/plus_sign"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/Zoom_Out"
        android:layout_width="52dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Zoom_In"
        app:srcCompat="@drawable/minus_icon"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/downArrow"
        android:layout_width="72dp"
        android:layout_height="74dp"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upArrow"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/downchevron"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/upArrow"
        android:layout_width="72dp"
        android:layout_height="74dp"
        android:layout_marginTop="200dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullMazeButton"
        app:layout_constraintVertical_bias="0.635"
        app:srcCompat="@drawable/downchevron"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/leftArrow"
        android:layout_width="72dp"
        android:layout_height="74dp"
        android:rotation="90"
        app:layout_constraintBottom_toTopOf="@+id/downArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upArrow"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/downchevron"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/rightArrow"
        android:layout_width="72dp"
        android:layout_height="74dp"
        android:rotation="-90"
        app:layout_constraintBottom_toTopOf="@+id/downArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upArrow"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/downchevron"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/Jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="172dp"
        android:text="@string/Jump"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>